@@ -10,7 +10,7 @@ requires 'Carp';
 requires 'Class::Accessor::Fast';
 requires 'Class::Data::Inheritable';
 requires 'Class::Inspector' => '1.06';
-requires 'CGI::Cookie';
+requires 'CGI::Simple::Cookie';
 requires 'Data::Dump';
 requires 'File::Modified';
 requires 'HTML::Entities';
@@ -25,7 +25,6 @@ requires 'NEXT';
 requires 'Path::Class' => '0.09';
 requires 'Scalar::Util';
 requires 'Text::SimpleTable' => '0.03';
-requires 'Test::MockObject';
 requires 'Time::HiRes';
 requires 'Tree::Simple' => '1.15';
 requires 'Tree::Simple::Visitor::FindByPath';
