@@ -1,6 +1,7 @@
 This file documents the revision history for Perl extension Catalyst.
 
-        - Removed test dependency on Test::NoWarnings
+        - Swapped out CGI::Cookie in favour of CGI::Simple::Cookie
+        - Removed test dependencies on Test::NoWarnings, Test::MockObject
         - Removed dependency on UNIVERSAL::require
         - Split out Catalyst::Helper into a new distribution
         - un-bundled the plugins as they are now pre-reqs for Catalyst::Helper
